    (sanjay Radia)

    HDFS-4597. Backport WebHDFS concat.  (szetszwo)

    MAPREDUCE-5081. Backport DistCpV2.  (szetszwo)

    HDFS-4651. Offline Image Viewer backport to branch-1.
    (Chris Nauroth via suresh)

    MAPREDUCE-4824. Provide a mechanism for jobs to indicate they should not
    be recovered on JobTracker restart. (tomwhite & acmurthy via acmurthy) 

  IMPROVEMENTS

    HADOOP-9434. Backport HADOOP-9267: hadoop -h|-{0,2}help should print usage.
    (Yu Li via llu)

    HDFS-3515. Port HDFS-1457 to branch-1. (eli)

    HDFS-3479. Port HDFS-3335 to branch-1. (Colin Patrick McCabe via eli)

    HDFS-3521. Check every byte at the end of edit log and allow namenode to
    tolerate corruption.  (szetszwo)

    HDFS-3604. Add dfs.webhdfs.enabled to hdfs-default.xml. (eli)

    HDFS-3596. Improve FSEditLog pre-allocation in branch-1
    (Colin Patrick McCabe via mattf)

    HDFS-3617. Port HDFS-96 to branch-1 (support blocks greater than 2GB).
    (Patrick Kling and harsh via eli)

    HADOOP-8586. Fixup a bunch of SPNEGO misspellings. (eli)

    HDFS-1957. Documentation for HFTP. (Ari Rabkin via eli)

    HDFS-3647. Backport HDFS-2868 (Add number of active transfer
    threads to the DataNode status) to branch-1 (harsh)

    MAPREDUCE-4415. Backport the Job.getInstance methods from
    MAPREDUCE-1505 to branch-1. (harsh)

    HDFS-3697. Enable fadvise readahead by default. (todd via eli)

    MAPREDUCE-4565. Backport MR-2855 to branch-1: ResourceBundle lookup during
    counter name resolution takes a lot of time. (Karthik Kambatla via sseth)

    HDFS-3819. Should check whether invalidate work percentage default value is 
    not greater than 1.0f. (Jing Zhao via jitendra)

    HDFS-3838. Fix the typo in FSEditLog.java: isToterationEnabled should be 
    isTolerationEnabled. (Brandon Li via jitendra)

    MAPREDUCE-4408. allow jobs to set a JAR that is in the distributed cached 
    (rkanter via tucu)
